--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rolling-stats",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Rolling statistics",
   "main": "rolling-stats.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "reset": "npm run clean && npm i && npm test",
     "repo-tag": "REPO_VERSION=`node -e \"console.log(require('./package').version)\"` && echo TAG: v$REPO_VERSION && git commit -a -m v$REPO_VERSION && git push && git tag v$REPO_VERSION && git push --tags;",
     "repo-publish": "npm run clean && npm i && npm run repo-publish-quick",
-    "repo-publish-quick": "npm run prettier && npm run build && npm run test && npm run repo-tag && npm publish --access public --registry https://registry.npmjs.org "
+    "repo-publish-quick": "npm run build && npm run test && npm run repo-tag && npm publish --access public --registry https://registry.npmjs.org "
   },
   "repository": {
     "type": "git",
